fix: improve sponsor scroller image visibility (#21)
This pull request improves the visibility of images in the sponsor
scrollbar. Especially for lighter logo's this was a noticeable issue.

--- a/src/Mercurius.LAN.Web/Components/Shared/SponsorScroller.razor.css
+++ b/src/Mercurius.LAN.Web/Components/Shared/SponsorScroller.razor.css
@@ -2,6 +2,7 @@
     display: flex;
     overflow: hidden;
     margin-top: auto;
+    margin-bottom: 1rem;
 }
 .slider {
     width: 100%;
@@ -13,9 +14,14 @@
     
 }
 
+.sponsor-logo {
+    filter: drop-shadow(2px 2px 2px #222);
+    -webkit-filter: drop-shadow(2px 2px 2px #222);
+}
+
 .slide {
     display: flex;
-    animation: slide 50s linear infinite;
+    animation: slide 60s linear infinite;
 
 }
 
